--- a/src/components/CalendarDesktopNavigation/CalendarDesktopNavigation.scss
+++ b/src/components/CalendarDesktopNavigation/CalendarDesktopNavigation.scss
@@ -12,7 +12,8 @@
   padding-left: 12px;
   align-items: center;
   //box-shadow: 0 5px 5px -5px #333;
-  @media (max-width: 750px) {
+  &-mobile {
+    @extend .CalendarDesktopNavigation__container;
     //width: 100%;
     flex-direction: column;
     padding-right: 12px;
@@ -30,7 +31,8 @@
   justify-content: center;
   align-items: center;
 
-  @media (max-width: 750px) {
+  &-mobile {
+    @extend .CalendarDesktopNavigation__buttons;
     justify-content: flex-end;
   }
 }
