--- a/src/components/headerCalendarTitle/HeaderCalendarTitle.scss
+++ b/src/components/headerCalendarTitle/HeaderCalendarTitle.scss
@@ -4,12 +4,13 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  padding: 0 24px 0 24px;
-  width: auto;
-  @media (max-width: 750px) {
+  padding: 0 24px 0 16px;
+  width: 100%;
+
+  &-mobile {
+    @extend .HeaderCalendarTitle__container;
     width: 100%;
   }
-
 }
 
 .HeaderCalendarTitle {
@@ -17,14 +18,16 @@
   font-weight: 700;
   margin: 0;
   padding: 0;
-  margin-right: 24px;
+  //margin-right: 24px;
   color: $text;
   //padding-left: 24px;
   display: -webkit-box;
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
   word-break: break-all;
-  @media (max-width: 750px) {
+
+  &-mobile {
+    @extend .HeaderCalendarTitle;
     width: 100%;
     margin: 0;
     padding: 0;
