Fix breaking title

--- a/src/components/headerCalendarTitle/HeaderCalendarTitle.scss
+++ b/src/components/headerCalendarTitle/HeaderCalendarTitle.scss
@@ -24,7 +24,7 @@
   display: -webkit-box;
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
-  word-break: break-all;
+  //word-break: break-all;
 
   &-mobile {
     @extend .HeaderCalendarTitle;
