--- a/src/components/headerCalendarTitle/HeaderCalendarTitle.scss
+++ b/src/components/headerCalendarTitle/HeaderCalendarTitle.scss
@@ -36,7 +36,7 @@
     display: -webkit-box;
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
-    word-break: break-all;
+    //word-break: break-all;
   }
 
   &-dark {
