--- a/src/components/CalendarDesktopNavigation/CalendarDesktopNavigation.scss
+++ b/src/components/CalendarDesktopNavigation/CalendarDesktopNavigation.scss
@@ -8,6 +8,8 @@
   display: flex;
   flex-direction: row;
   height: 70px;
+  max-height: 70px;
+  min-height: 70px;
   width: auto;
   padding-left: 12px;
   align-items: center;
@@ -17,6 +19,7 @@
     //width: 100%;
     flex-direction: column;
     padding-right: 12px;
+    width: 100%;
   }
   }
 
