--- a/src/components/eventButton/components/eventSummary/EventSummary.scss
+++ b/src/components/eventButton/components/eventSummary/EventSummary.scss
@@ -4,14 +4,14 @@
   display: -webkit-box;
   webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
-  font-size: 1rem;
+  font-size: 1.1rem;
   margin: 0;
   padding: 5px 1px 6px 4px;
   opacity: 1;
   overflow: hidden;
-  color: $GRAY_100;
+  color: white;
   @media (min-width: 750px) {
-    font-size: 1.2rem;
+    font-size: 1.4rem;
   }
 }
 
