--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,12 @@
 p {
   padding: 0;
-  margin: 0
+  margin: 0;
+  font-family: "Open Sans", serif;
 }
 
 html {
   font-size: 10px;
+  font-family: "Open Sans", serif;
 }
 
 .Calendar__root {
