Update event layout, fix min event height

--- a/src/components/eventButton/EventButton.scss
+++ b/src/components/eventButton/EventButton.scss
@@ -1,7 +1,7 @@
 @import '../../styles/colors';
 
 .Event {
-  border-radius: 4px;
+  border-radius: 6px !important;
   z-index: 2;
   display: flex;
   justify-content: flex-start;
