--- a/src/components/eventButton/components/eventSummary/EventSummary.scss
+++ b/src/components/eventButton/components/eventSummary/EventSummary.scss
@@ -10,6 +10,7 @@
   opacity: 1;
   overflow: hidden;
   color: white;
+  font-weight: 600;
   @media (min-width: 750px) {
     font-size: 1.4rem;
   }
@@ -19,11 +20,13 @@
   &-header {
     padding: 1px;
     padding-left: 3px;
+    font-weight: 500;
   }
 
   &-month {
     padding: 1px;
     padding-left: 3px;
+    font-weight: 500;
   }
 
   &-agenda {
