--- a/src/components/eventButton/components/eventTime/EventTime.scss
+++ b/src/components/eventButton/components/eventTime/EventTime.scss
@@ -5,11 +5,11 @@
   webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
   margin: 0;
-  padding: 2px 1px 2px 4px;
+  padding: 2px 1px 0 4px;
   opacity: 1;
   overflow: hidden;
-  color: white;
-  font-size: 1.2rem;
+  color: #f6f4f4;
+  font-size: 1.1rem;
 }
 
 .Event__time__type {
