--- a/src/index.scss
+++ b/src/index.scss
@@ -1,12 +1,11 @@
 p {
   padding: 0;
   margin: 0;
-  font-family: "Open Sans", serif;
 }
 
 html {
   font-size: 10px;
-  font-family: "Open Sans", serif;
+  font-family: MONOSPACE, SansSerif, sans-serif, serif
 }
 
 .Calendar__root {
@@ -24,4 +23,30 @@ html {
   width: 100%;
   height: 100% !important;
   position: relative;
+}
+
+button {
+  padding: inherit;
+  margin: 0;
+  border: none;
+  font: inherit;
+  color: inherit;
+  background-color: transparent;
+  cursor: pointer;
+  appearance: auto;
+  letter-spacing: inherit;
+  word-spacing: inherit;
+  line-height: inherit;
+  text-transform: none;
+  text-indent: inherit;
+  text-shadow: none;
+  display: flex;
+  text-align: inherit;
+  align-items: inherit;
+  box-sizing: inherit;
+  background-color: transparent;
+  border-width: inherit;
+  border-style: inherit;
+  border-color: inherit;
+  border-image: inherit;
 }
