Fix month layout for smaller views

--- a/src/components/eventButton/EventButton.scss
+++ b/src/components/eventButton/EventButton.scss
@@ -18,9 +18,10 @@
 
   &-month {
     @extend .Event;
-    padding: 1px;
-    margin-bottom: 2px;
+    padding-left: 1px;
+    margin-bottom: 1px;
     align-items: center;
+    min-height: auto !important;
   }
 
   &-normal {
