Fix wrapping text in month event

--- a/src/components/eventButton/components/eventSummary/EventSummary.scss
+++ b/src/components/eventButton/components/eventSummary/EventSummary.scss
@@ -21,12 +21,14 @@
     padding: 1px;
     padding-left: 3px;
     font-weight: 500;
+    white-space: nowrap;
   }
 
   &-month {
     padding: 1px;
     padding-left: 3px;
     font-weight: 500;
+    white-space: nowrap;
   }
 
   &-agenda {
