--- a/src/components/calendarHeader/CalendarHeader.scss
+++ b/src/components/calendarHeader/CalendarHeader.scss
@@ -65,7 +65,7 @@
   position: absolute;
   border-radius: 4px;
   z-index: 9;
-  height: 40;
+  height: 40px;
   text-align: left;
   padding-left: 4px;
   display: flex;
