--- a/src/components/calendarHeader/components/calendarHeaderWrapper/CalendarHeaderWrapper.scss
+++ b/src/components/calendarHeader/components/calendarHeaderWrapper/CalendarHeaderWrapper.scss
@@ -1,6 +1,6 @@
 @import '../../../../styles/colors';
 
-.CalendarHeaderWrapper {
+.Calend__CalendarHeaderWrapper {
   display: flex;
   flex-direction: column;
   margin: 0;
@@ -11,7 +11,7 @@
   }
 
   &-dark {
-    @extend .CalendarHeaderWrapper;
+    @extend .Calend__CalendarHeaderWrapper;
     background: $MODAL_DARK;
   }
 }
