--- a/src/components/daysViewTable/DaysViewTable.scss
+++ b/src/components/daysViewTable/DaysViewTable.scss
@@ -1,11 +1,11 @@
 @import '../../styles/colors';
 
-.full-screen {
+.Calend__full-screen {
   height: 100%;
   width: 100%;
 }
 
-.CalendarBody {
+.Calend__CalendarBody {
   display: flex;
   flex-direction: row;
   padding: 0;
@@ -21,11 +21,11 @@
   right: 0;
 }
 
-.calendar-animation {
+.Calend__calendar-animation {
   animation-name: event-load;
   animation-duration: 1s;
 }
-@keyframes event-load {
+@keyframes Calend__event-load {
   0% {
     right: -1500px;
   }
