--- a/src/components/eventButton/components/eventSummary/EventSummary.scss
+++ b/src/components/eventButton/components/eventSummary/EventSummary.scss
@@ -1,10 +1,10 @@
 @import '../../../../styles/colors';
 
-.Event__summary {
+.Calend__Event__summary {
   display: -webkit-box;
   webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
-  font-size: 1.1rem;
+  font-size: 0.8em;
   margin: 0;
   padding: 5px 1px 6px 4px;
   opacity: 1;
@@ -12,11 +12,11 @@
   color: white;
   font-weight: 600;
   @media (min-width: 750px) {
-    font-size: 1.2rem;
+    font-size: 0.8em;
   }
 }
 
-.Event__summary__type {
+.Calend__Event__summary__type {
   &-header {
     padding: 1px;
     padding-left: 3px;
@@ -32,7 +32,7 @@
   }
 
   &-agenda {
-    font-size: 1.4rem;
+    font-size: 1.4em;
     padding: 8px;
     font-weight: 600;
   }
