--- a/src/components/eventButton/eventAgenda/EventAgenda.scss
+++ b/src/components/eventButton/eventAgenda/EventAgenda.scss
@@ -1,6 +1,6 @@
 @import '../../../styles/colors';
 
-.Agenda__container {
+.Calend__Agenda__container {
   display: flex;
   flex-direction: column;
   padding: 8px;
