--- a/src/components/buttonBase/ButtonBase.scss
+++ b/src/components/buttonBase/ButtonBase.scss
@@ -1,8 +1,8 @@
 @import '../../styles/colors';
 
-.ButtonBase {
+.Calend__ButtonBase {
   min-height: 20px;
-  font-size: 1.6rem;
+  font-size: 1.6em;
   border-radius: 10px;
   //padding: 12px 16px 12px 16px;
   font-weight: 400;
@@ -20,44 +20,44 @@
   }
 
   &-normal {
-    @extend .ButtonBase;
+    @extend .Calend__ButtonBase;
     border: none;
     background-color: $GRAY_800;
     padding: 4px 12px 4px 12px;
     color: $GRAY_100;
 
     &:hover {
-      @extend .ButtonBase-normal;
+      @extend .Calend__ButtonBase-normal;
       background-color: $GRAY_600;
     }
   }
 
   &-disabled {
-    @extend .ButtonBase;
+    @extend .Calend__ButtonBase;
     background-color: $GRAY_400;
     color: $GRAY_700;
   }
 
   &-primary {
-    @extend .ButtonBase;
+    @extend .Calend__ButtonBase;
     padding: 4px 12px 4px 12px;
     background-color: $PRIMARY_LIGHT;
     color: $GRAY_200;
 
     &:hover {
-      @extend .ButtonBase-primary;
+      @extend .Calend__ButtonBase-primary;
       background-color: $PRIMARY_LIGHT_OVERLAY;
     }
 
     &-dark {
-      @extend .ButtonBase-primary;
+      @extend .Calend__ButtonBase-primary;
       background-color: $PRIMARY_DARK;
       color: $GRAY_800;
     }
   }
 
   &-transparent {
-    @extend .ButtonBase;
+    @extend .Calend__ButtonBase;
     padding: 4px 12px 4px 12px;
     color: $GRAY_700;
     background-color: transparent;
@@ -69,14 +69,14 @@
   }
 }
 
-.ButtonBase__animation {
+.Calend__ButtonBase__animation {
   position: absolute;
   transform: scale(0);
   background-color: rgba(50, 50, 50, 0.3);
   border-radius: 50%;
-  animation: ripple__animation 500ms ease-in;
+  animation: Calend__ripple__animation 500ms ease-in;
 
-  @keyframes ripple__animation {
+  @keyframes Calend__ripple__animation {
     from {
       transform: scale(0);
     }
@@ -86,7 +86,7 @@
   }
 }
 
-.ButtonBase__loader-circle {
+.Calend__ButtonBase__loader-circle {
   width: 12px;
   height: 12px;
   background-color: $GRAY_300;
@@ -99,26 +99,26 @@
   -moz-animation-fill-mode: forwards;
   -o-animation-fill-mode: forwards;
   -ms-animation-fill-mode: forwards;
-  animation-name: ButtonBase__animation-pulse-loader;
+  animation-name: Calend__ButtonBase__animation-pulse-loader;
   animation-delay: 0s;
 
   &-left {
-    @extend .ButtonBase__loader-circle;
+    @extend .Calend__ButtonBase__loader-circle;
     animation-delay: 0s;
   }
 
   &-middle {
-    @extend .ButtonBase__loader-circle;
+    @extend .Calend__ButtonBase__loader-circle;
     animation-delay: 0.3s;
   }
 
   &-right {
-    @extend .ButtonBase__loader-circle;
+    @extend .Calend__ButtonBase__loader-circle;
     animation-delay: 0.5s;
   }
 }
 
-@keyframes ButtonBase__animation-pulse-loader {
+@keyframes Calend__ButtonBase__animation-pulse-loader {
   0% {
     opacity: 0;
     background-color: $GRAY_500;
@@ -132,7 +132,7 @@
   }
 }
 
-.Button-long {
+.Calend__Button-long {
   width: 100%;
   padding: 4px 12px 4px 12px;
   border-radius: 8px;
@@ -142,6 +142,6 @@
   align-items: center;
 
   &:hover {
-    @extend .Button-long;
+    @extend .Calend__Button-long;
   }
 }
