--- a/src/components/buttonIcon/ButtonIcon.scss
+++ b/src/components/buttonIcon/ButtonIcon.scss
@@ -1,6 +1,6 @@
 @import '../../styles/colors';
 
-.ButtonIcon__container {
+.Calend__ButtonIcon__container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -9,31 +9,31 @@
   position: relative;
 
   &-small {
-    @extend .ButtonIcon__container;
+    @extend .Calend__ButtonIcon__container;
     width: 30px;
     height: 30px;
     border-radius: 15px;
   }
 
   &-big {
-    @extend .ButtonIcon__container;
+    @extend .Calend__ButtonIcon__container;
     width: 55px;
     height: 55px;
     border-radius: 27.5px;
   }
 
   &-full {
-    @extend .ButtonIcon__container;
+    @extend .Calend__ButtonIcon__container;
     width: 100%;
     height: 100%;
     border-radius: 50%;
   }
 }
 
-.ButtonIcon {
+.Calend__ButtonIcon {
   fill: $GRAY_600;
   background-color: transparent;
-  font-size: 1.4rem;
+  font-size: 1.4em;
   border: none;
   outline-style: none;
   cursor: pointer;
@@ -46,33 +46,33 @@
   z-index: 3;
 
   &:hover {
-    @extend .ButtonIcon;
+    @extend .Calend__ButtonIcon;
     opacity: 0.9;
     background-color: $GRAY_300;
   }
 
   &-dark {
-    @extend .ButtonIcon;
+    @extend .Calend__ButtonIcon;
     fill: $GRAY_400;
   }
 
   &-inactive {
-    @extend .ButtonIcon;
+    @extend .Calend__ButtonIcon;
 
     &:active {
-      @extend .ButtonIcon-inactive;
+      @extend .Calend__ButtonIcon-inactive;
       background-color: transparent;
       animation: none;
     }
 
     &:hover {
-      @extend .ButtonIcon-inactive;
+      @extend .Calend__ButtonIcon-inactive;
       background-color: transparent;
     }
   }
 }
 
-.ButtonIcon__disabled {
+.Calend__ButtonIcon__disabled {
   cursor: default !important;
   &:hover {
     background-color: transparent !important;
@@ -82,7 +82,7 @@
   }
 }
 
-.ButtonIcon__svg {
+.Calend__ButtonIcon__svg {
   width: 100%;
   height: 100%;
   padding: 1px;
@@ -90,27 +90,27 @@
   fill: $GRAY_600;
 
   &-normal {
-    @extend .ButtonIcon__svg;
-    width: 2.2rem;
-    height: 2.2rem;
+    @extend .Calend__ButtonIcon__svg;
+    width: 2.2em;
+    height: 2.2em;
   }
 }
 
-.ButtonIcon__backdrop {
+.Calend__ButtonIcon__backdrop {
   position: absolute;
   background-color: $GRAY_400;
   opacity: 0.4;
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  animation-name: ButtonIcon__animation-backdrop;
+  animation-name: Calend__ButtonIcon__animation-backdrop;
   animation-delay: 0s;
   animation-duration: 0.4s;
 
   &:active {
-    @extend .ButtonIcon__backdrop;
+    @extend .Calend__ButtonIcon__backdrop;
     background-color: $GRAY_600;
-    animation-name: ButtonIcon__animation-press;
+    animation-name: Calend__ButtonIcon__animation-press;
     animation-duration: 0.1s;
     animation-delay: 0s;
     -webkit-animation-fill-mode: forwards;
@@ -120,7 +120,7 @@
   }
 }
 
-@keyframes ButtonIcon__animation-press {
+@keyframes Calend__ButtonIcon__animation-press {
   0% {
     background-color: $GRAY_100;
     opacity: 0.5;
@@ -131,7 +131,7 @@
   }
 }
 
-@keyframes ButtonIcon__animation-backdrop {
+@keyframes Calend__ButtonIcon__animation-backdrop {
   0% {
     background-color: $GRAY_100;
     width: 0;
