--- a/src/components/calendarHeader/components/calendarHeaderCol/CalendarHeaderCol.scss
+++ b/src/components/calendarHeader/components/calendarHeaderCol/CalendarHeaderCol.scss
@@ -1,6 +1,6 @@
 @import '../../../../styles/colors';
 
-.CalendarHeaderCol {
+.Calend__CalendarHeaderCol {
   display: flex;
   flex-direction: column;
   margin: 0;
@@ -12,7 +12,7 @@
   }
 
   &-dark {
-    @extend .CalendarHeaderCol;
+    @extend .Calend__CalendarHeaderCol;
     background: $MODAL_DARK;
   }
 }
