--- a/src/components/calendarHeader/components/calendarHeaderWeekDays/CalendarHeaderWeekDays.scss
+++ b/src/components/calendarHeader/components/calendarHeaderWeekDays/CalendarHeaderWeekDays.scss
@@ -1,30 +1,30 @@
 @import '../../../../styles/colors';
 
-.CalendarHeaderWeekDays__wrapper {
+.Calend__CalendarHeaderWeekDays__wrapper {
   display: flex;
   flex-direction: column;
   justify-content: center;
   margin: 0;
 }
 
-.CalendarHeaderWeekDays__container {
+.Calend__CalendarHeaderWeekDays__container {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
 }
 
-.CalendarHeaderWeekDays__col {
+.Calend__CalendarHeaderWeekDays__col {
   display: flex;
   justify-content: center;
   align-items: center;
   align-self: center;
 }
 
-.CalendarHeaderWeekDays__text {
+.Calend__CalendarHeaderWeekDays__text {
   margin: 0;
   padding: 1px;
-  font-size: 1.2rem;
+  font-size: 1.2em;
   align-self: center;
   text-align: center;
   color: $GRAY_500;
