--- a/src/components/carousel/carousel.scss
+++ b/src/components/carousel/carousel.scss
@@ -1,6 +1,6 @@
 @import '../../styles/colors';
 
-.carousel__wrapper {
+.Calend__carousel__wrapper {
   display: flex;
   flex-direction: row;
   height: 100%;
@@ -11,27 +11,27 @@
   }
 }
 
-.carousel__control {
+.Calend__carousel__control {
   height: 100%;
   width: 100%;
   display: flex;
   align-items: center;
 }
-.carousel__control-left {
-  @extend .carousel__control;
+.Calend__carousel__control-left {
+  @extend .Calend__carousel__control;
   left: 100px;
   justify-content: flex-start;
-  animation-name: carousel-left;
+  animation-name: Calend__carousel-left;
   animation-duration: 0.3s;
 }
-.carousel__control-right {
-  @extend .carousel__control;
+.Calend__carousel__control-right {
+  @extend .Calend__carousel__control;
   right: 100px;
   justify-content: flex-end;
-  animation-name: carousel-right;
+  animation-name: Calend__carousel-right;
   animation-duration: 0.3s;
 }
-@keyframes carousel-left {
+@keyframes Calend__carousel-left {
   0% {
     left: -100px;
   }
@@ -39,7 +39,7 @@
     left: 100px;
   }
 }
-@keyframes carousel-right {
+@keyframes Calend__carousel-right {
   0% {
     right: -100px;
   }
