--- a/src/components/eventButton/EventButton.scss
+++ b/src/components/eventButton/EventButton.scss
@@ -1,6 +1,6 @@
 @import '../../styles/colors';
 
-.Event {
+.Calend__Event {
   border-radius: 6px !important;
   z-index: 2;
   display: flex;
@@ -13,11 +13,11 @@
   -moz-animation-fill-mode: forwards;
   -o-animation-fill-mode: forwards;
   -ms-animation-fill-mode: forwards;
-  animation-name: EventDetail_animationShow;
+  animation-name: Calend__EventDetail_animationShow;
   animation-delay: 0s;
 
   &-month {
-    @extend .Event;
+    @extend .Calend__Event;
     padding-left: 1px;
     margin-bottom: 1px;
     align-items: center;
@@ -25,24 +25,24 @@
   }
 
   &-normal {
-    @extend .Event;
+    @extend .Calend__Event;
   }
 
   &-header {
-    @extend .Event;
+    @extend .Calend__Event;
     padding: 1px;
     padding-left: 3px;
     align-items: center;
   }
 
   &-agenda {
-    @extend .Event;
+    @extend .Calend__Event;
     height: 100% !important;
   }
 }
 
 
-@keyframes EventDetail_animationShow {
+@keyframes Calend__EventDetail_animationShow {
   0% {
     opacity: 0;
     min-height: 0 !important;
