--- a/src/components/monthView/monthOneDay/MonthOneDay.scss
+++ b/src/components/monthView/monthOneDay/MonthOneDay.scss
@@ -7,7 +7,7 @@ $box_shadow-bottom: inset 0px -1px 1px;
 $box_shadow-bottom-right: inset -1px -1px 0px;
 $box_shadow-right: inset -1px 0px 0px;
 
-.MonthOneDay__header-container {
+.Calend__MonthOneDay__header-container {
   height: 25px;
   display: flex;
   flex-direction: column;
@@ -15,14 +15,14 @@ $box_shadow-right: inset -1px 0px 0px;
   justify-content: center;
 }
 
-.MonthOneDay__events-container {
+.Calend__MonthOneDay__events-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-.MonthOneDay__date-container {
+.Calend__MonthOneDay__date-container {
   height: 20px;
   width: 20px;
   border-radius: 10px;
@@ -31,61 +31,61 @@ $box_shadow-right: inset -1px 0px 0px;
   display: flex;
 }
 
-.MonthOneDay__circle-color {
+.Calend__MonthOneDay__circle-color {
   background: $PRIMARY_LIGHT;
 
   &-dark {
-    @extend .MonthOneDay__circle-color;
+    @extend .Calend__MonthOneDay__circle-color;
     background: $PRIMARY_DARK;
   }
 }
 
-.MonthOneDay__date {
-  font-size: 1rem;
+.Calend__MonthOneDay__date {
+  font-size: 1em;
   padding: 0;
   margin: 0;
   color: $GRAY_900;
 
   &-dark {
-    @extend .MonthOneDay__date;
+    @extend .Calend__MonthOneDay__date;
     color: $GRAY_300;
   }
 
   &-past {
-    @extend .MonthOneDay__date;
+    @extend .Calend__MonthOneDay__date;
     color: $GRAY_400;
 
     &-dark {
-      @extend .MonthOneDay__date-past;
+      @extend .Calend__MonthOneDay__date-past;
       color: $GRAY_600;
     }
   }
 
   &-today {
-    @extend .MonthOneDay__date;
+    @extend .Calend__MonthOneDay__date;
     color: $textDark;
 
     &-dark {
-      @extend .MonthOneDay__date-today;
+      @extend .Calend__MonthOneDay__date-today;
       color: $text;
     }
   }
 }
 
-.MonthOneDay__border {
+.Calend__MonthOneDay__border {
   width: $month_view__width;
   height: $month_view__height;
   padding: 0;
   margin: 0;
 
   &-bottom {
-    @extend .MonthOneDay__border;
+    @extend .Calend__MonthOneDay__border;
     box-shadow: $box_shadow-bottom $borderLight;
     -moz-box-shadow: $box_shadow-bottom-right $borderLight;
     -webkit-box-shadow: $box_shadow-bottom-right $borderLight;
 
     &-dark {
-      @extend .MonthOneDay__border;
+      @extend .Calend__MonthOneDay__border;
       box-shadow: $box_shadow-bottom $borderLightDark;
       -moz-box-shadow: $box_shadow-bottom-right $borderLightDark;
       -webkit-box-shadow: $box_shadow-bottom-right $borderLightDark;
@@ -93,13 +93,13 @@ $box_shadow-right: inset -1px 0px 0px;
   }
 
   &-bottom-right {
-    @extend .MonthOneDay__border;
+    @extend .Calend__MonthOneDay__border;
     box-shadow: $box_shadow-right $borderLight;
     -moz-box-shadow: $box_shadow-bottom-right $borderLight;
     -webkit-box-shadow: $box_shadow-bottom-right $borderLight;
 
     &-dark {
-      @extend .MonthOneDay__border-bottom-right;
+      @extend .Calend__MonthOneDay__border-bottom-right;
       box-shadow: $box_shadow-bottom-right $borderLightDark;
       -moz-box-shadow: $box_shadow-bottom-right $borderLightDark;
       -webkit-box-shadow: $box_shadow-bottom-right $borderLightDark;
@@ -107,13 +107,13 @@ $box_shadow-right: inset -1px 0px 0px;
   }
 
   &-right {
-    @extend .MonthOneDay__border;
+    @extend .Calend__MonthOneDay__border;
     box-shadow: $box_shadow-right $borderLight;
     -moz-box-shadow: $box_shadow-bottom-right $borderLight;
     -webkit-box-shadow: $box_shadow-bottom-right $borderLight;
 
     &-dark {
-      @extend .MonthOneDay__border;
+      @extend .Calend__MonthOneDay__border;
       box-shadow: $box_shadow-right $borderLightDark;
       -moz-box-shadow: $box_shadow-bottom-right $borderLightDark;
       -webkit-box-shadow: $box_shadow-bottom-right $borderLightDark;
