--- a/src/index.scss
+++ b/src/index.scss
@@ -1,23 +1,28 @@
-p {
+.Calend__text {
   padding: 0;
   margin: 0;
+  //font-size: 10px;
+  font-family: MONOSPACE, SansSerif, sans-serif, serif;
+  font-size: 1em;
 }
 
-html {
-  font-size: 10px;
-  font-family: MONOSPACE, SansSerif, sans-serif, serif
-}
-
-.Calendar__root {
+.Calend__Calendar__root {
   display: flex;
   width: 100%;
   height: 100%;
   flex-direction: column;
+  font-size: 10px;
+
   //overflow-x: hidden;
   //overflow-y: scroll;
 }
 
-.Calendar__table {
+.Calend__main * {
+  //font-size: 10px;
+  font-family: MONOSPACE, SansSerif, sans-serif, serif;
+}
+
+.Calend__Calendar__table {
   display: inherit;
   overflow: hidden;
   width: 100%;
@@ -25,7 +30,7 @@ html {
   position: relative;
 }
 
-button {
+.Calend__button {
   padding: inherit;
   margin: 0;
   border: none;
