--- a/src/components/eventButton/EventButton.scss
+++ b/src/components/eventButton/EventButton.scss
@@ -1,5 +1,15 @@
 @import '../../styles/colors';
 
+.Calend__Event__animate {
+  animation-duration: 0.2s;
+  -webkit-animation-fill-mode: forwards;
+  -moz-animation-fill-mode: forwards;
+  -o-animation-fill-mode: forwards;
+  -ms-animation-fill-mode: forwards;
+  animation-name: Calend__EventDetail_animationShow;
+  animation-delay: 0s;
+}
+
 .Calend__Event {
   border-radius: 6px !important;
   z-index: 2;
@@ -8,13 +18,6 @@
   align-items: flex-start;
   color: white;
   opacity: 1 !important;
-  animation-duration: 0.8s;
-  -webkit-animation-fill-mode: forwards;
-  -moz-animation-fill-mode: forwards;
-  -o-animation-fill-mode: forwards;
-  -ms-animation-fill-mode: forwards;
-  animation-name: Calend__EventDetail_animationShow;
-  animation-delay: 0s;
 
   &-month {
     @extend .Calend__Event;
@@ -44,6 +47,12 @@
   }
 }
 
+.Calend__EventButton__elevation {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.4) !important;
+  z-index: 9999 !important;
+  cursor: grab !important;
+}
+
 
 @keyframes Calend__EventDetail_animationShow {
   0% {
@@ -56,3 +65,4 @@
     //height: 100%;
   }
 }
+
