--- a/src/components/monthView/MonthView.scss
+++ b/src/components/monthView/MonthView.scss
@@ -1,7 +1,9 @@
+@use "sass:math";
+
 @import '../../styles/colors';
 
-$month_view__width: 100%/7;
-$month_view__height: 100%/6;
+$month_view__width: math.div(100%, 7);
+$month_view__height: math.div(100%, 6);
 
 .Calend__MonthView__container {
   flex-direction: row;
