Refactor layout calculations, add listener to event updates, improve rerenders

--- a/src/components/calendarHeader/calendarHeaderEvents/CalendarHeaderEvents.scss
+++ b/src/components/calendarHeader/calendarHeaderEvents/CalendarHeaderEvents.scss
@@ -26,6 +26,7 @@
   width: 100%;
   padding-bottom: 2px;
   height: auto;
+  position: relative;
 }
 .Calend__CalendarHeaderEvents__eventRow {
   display: flex;
