--- a/src/components/daysViewTable/daysViewOneDay/DaysViewOneDay.scss
+++ b/src/components/daysViewTable/daysViewOneDay/DaysViewOneDay.scss
@@ -3,16 +3,16 @@
 $BORDER_COLOR: $GRAY_300;
 $BORDER_DARK_COLOR: $GRAY_900;
 
-.Calend__DayViewOneDay {
+.Kalend__DayViewOneDay {
   position: relative;
   flex-direction: column;
 }
 
-.Calend__DayViewOneDay__border-left {
+.Kalend__DayViewOneDay__border-left {
   border-left: solid 0.6px $BORDER_COLOR;
 
   &-dark {
-    @extend .Calend__DayViewOneDay__border-left;
+    @extend .Kalend__DayViewOneDay__border-left;
     border-left: solid 0.6px $BORDER_DARK_COLOR;
   }
 }
