--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,4 @@
-.Calend__text {
+.Kalend__text {
   padding: 0;
   margin: 0;
   //font-size: 10px;
@@ -6,7 +6,7 @@
   font-size: 1em;
 }
 
-.Calend__Calendar__root {
+.Kalend__Calendar__root {
   display: flex;
   width: 100%;
   height: 100%;
@@ -17,12 +17,12 @@
   //overflow-y: scroll;
 }
 
-.Calend__main * {
+.Kalend__main * {
   //font-size: 10px;
   font-family: MONOSPACE, SansSerif, sans-serif, serif;
 }
 
-.Calend__Calendar__table {
+.Kalend__Calendar__table {
   display: inherit;
   overflow: hidden;
   width: 100%;
@@ -30,7 +30,7 @@
   position: relative;
 }
 
-.Calend__button {
+.Kalend__button {
   padding: inherit;
   margin: 0;
   border: none;
