--- a/src/components/monthView/monthOneDay/MonthOneDay.scss
+++ b/src/components/monthView/monthOneDay/MonthOneDay.scss
@@ -22,6 +22,7 @@ $box_shadow-right: inset -1px 0px 0px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 
 .Kalend__MonthOneDay__date-container {
