Fix missing lines after page change, adjust layout for scrollbar

--- a/src/index.scss
+++ b/src/index.scss
@@ -26,3 +26,4 @@
 @import './components/mobileLayout/MobileLayout.scss';
 @import './components/monthView/MonthView.scss';
 @import './components/monthView/monthOneDay/MonthOneDay.scss';
+@import './components/daysViewTable/daysViewVerticalLines/DaysViewVerticalLines.scss';
