--- a/src/index.scss
+++ b/src/index.scss
@@ -20,10 +20,13 @@
 @import './components/eventButton/EventButton.scss';
 @import './components/eventButton/components/eventSummary/EventSummary.scss';
 @import './components/eventButton/components/eventTime/EventTime.scss';
+@import './components/eventButton/eventShowMoreMonth/EventShowMoreMonth.scss';
 @import './components/eventButton/eventAgenda/EventAgenda.scss';
 @import './components/headerCalendarButtons/HeaderCalendarButtons.scss';
 @import './components/headerCalendarTitle/HeaderCalendarTitle.scss';
 @import './components/mobileLayout/MobileLayout.scss';
 @import './components/monthView/MonthView.scss';
 @import './components/monthView/monthOneDay/MonthOneDay.scss';
+@import './components/monthView/monthWeekRow/MonthWeekRow.scss';
+@import './components/monthView/showMoreModal/ShowMoreModal.scss';
 @import './components/daysViewTable/daysViewVerticalLines/DaysViewVerticalLines.scss';
