--- a/src/components/calendarHeader/calendarHeaderEvents/CalendarHeaderEvents.scss
+++ b/src/components/calendarHeader/calendarHeaderEvents/CalendarHeaderEvents.scss
@@ -7,6 +7,7 @@
   justify-content: center;
   //height: auto !important;
   position: relative;
+  margin-left: 40px;
   //min-height: 30px;
   //height: auto;
 }
