Fix month overflowing events

--- a/src/components/eventButton/EventButton.scss
+++ b/src/components/eventButton/EventButton.scss
@@ -18,6 +18,7 @@
   align-items: flex-start;
   color: white;
   opacity: 1 !important;
+  min-height: 17px !important;
 
   &-month {
     @extend .Kalend__Event;
@@ -36,6 +37,7 @@
   &-header {
     @extend .Kalend__Event;
     //padding: 1px;
+    min-height: 20px !important;
     padding-left: 3px;
     border: none !important;
     align-items: center;
