--- a/src/index.scss
+++ b/src/index.scss
@@ -30,3 +30,4 @@
 @import './components/monthView/monthWeekRow/MonthWeekRow.scss';
 @import './components/monthView/showMoreModal/ShowMoreModal.scss';
 @import './components/daysViewTable/daysViewVerticalLines/DaysViewVerticalLines.scss';
+@import './components/dropdown/Dropdown.scss';
