--- a/example_app/src/index.scss
+++ b/example_app/src/index.scss
@@ -1,12 +1,16 @@
-html {
+html body{
   font-size: 10px;
   padding: 0;
   margin: 0;
   width: 100vw;
   height: 100vh;
   overflow: hidden;
-  background: dodgerblue;
   font-family: MONOSPACE;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
 }
 
 p {
@@ -23,6 +27,7 @@ a {
   flex-direction: column;
   width: 100%;
   height: 100vh;
+  background: dodgerblue;
 }
 
 
@@ -39,7 +44,7 @@ a {
 }
 .title {
   font-weight: bold;
-  font-size: 5rem;
+  font-size: 4.2rem;
   color: white;
   margin: 12px 48px 20px 48px;
 
@@ -50,7 +55,7 @@ a {
 
 .subtitle {
   font-weight: bold;
-  font-size: 2rem;
+  font-size: 1.7rem;
   color: white;
   margin: 0 0 48px;
 }
