Expose header functions

--- a/example_app/src/index.scss
+++ b/example_app/src/index.scss
@@ -72,6 +72,7 @@ a {
   justify-content: center;
   align-items: center;
   background: white;
+  flex-direction: column;
 }
 
 .container__button {
