--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,8 +12,7 @@
   height: 100%;
   flex-direction: column;
   font-size: 10px;
-
-  //overflow-x: hidden;
+  overflow-x: hidden;
   //overflow-y: scroll;
 }
 
